# qi_tao_gui

./: CMakeLists.txt  chukujiemian.cpp  chukujiemian.h  chukujiemian.ui  data_model.cpp  data_model.h  dialog.cpp  dialog.h  main.cpp  qitaogui.pro  qitaojiemian.cpp  qitaojiemian.h  qitaojiemian.ui  res.qrc  ruku.cpp  ruku.h  ruku.ui  serial_constant.h  serial_test.cpp  serial_test.h  wigglywidget.cpp  yilantable.cpp  yilantable.h  yilantable.ui
resources/: bom.json  bom_bk.json
